--- a/data/_config.yml
+++ b/data/_config.yml
@@ -32,6 +32,14 @@ theme: minima
 plugins:
   - jekyll-feed
 
+defaults:
+ -
+   scope:
+     path: "posts" # empty string means all files
+   values:
+     layout: "post"
+     author: "Jakub Vítovec"
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
