--- a/data/_config.yml
+++ b/data/_config.yml
@@ -32,6 +32,9 @@ theme: minima
 plugins:
   - jekyll-feed
 
+source: .
+destination: ./_site
+
 defaults:
  -
    scope:
@@ -44,15 +47,6 @@ collections:
   projects:
     output: true
     permalink: /projects/:title/
-
-plugins:
-  - jekyll-paginate-v2
-
-paginate:
-  enabled: true
-  collection: 'projects'
-  per_page: 3
-  title: ':title - Page :num'
 
 # Exclude from processing.
 # The following items will not be processed, by default.
