Page url updated

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is my personal website, where I as a software developer post various of my personal 
   projects or just share some random thoughts and code snippets. 
 baseurl: ""
-url: https://jakvitov.cz
+url: https://jakvitov.github.io
 github_username: jakvitov
 linkedin_username: jakub-vítovec-91a838232
 
